--- a/index.html
+++ b/index.html
@@ -6,13 +6,39 @@
   <title>flood</title>
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
   <script src="gl.js"></script>
   <script src="https://unpkg.com/leaflet-hash@0.2.1/leaflet-hash.js"></script>
+  <style>
+    #info {
+      position: absolute;
+      top: 50%;
+      margin-top: -1.5em;
+      height: auto;
+      left: 0;
+      right: 0;
+      z-index: 2000;
+      text-align: center;
+      background: rgba(128, 0, 0, 0.8);
+      color: white;
+      padding: 2em 0;
+    }
+
+    #info.ready {
+      cursor: pointer;
+      background: rgba(0, 0, 128, 0.8);
+    }
+
+    #info.ready:hover {
+      background: rgba(0, 0, 128, 1);
+    }
+  </style>
 </head>
 
 <body>
   <div id="map" style="position:absolute;top:0;left:0;bottom:0;right:0;"></div>
+  <div id="info">Hello</div>
   <script>
     var fragmentShader =
       `
@@ -22,12 +48,15 @@ uniform sampler2D rain;
 uniform mat3 matrix;
 uniform int dx;
 uniform int dy;
-const vec4 rgba2alt = vec4(256.0 * 256.0 * 2.56, 256.0 * 2.56, 2.56, 0.0);
 const float delta = 8.0 / 256.0;
 
 float h(int dx,int dy){
-  vec4 a = texture2D(land, (matrix * (gl_FragCoord.xyw + vec3(dx,dy,0))).xy);
-  return a.r < 0.5 ? dot(a,rgba2alt) : -1.0;
+  float x = dot(
+    texture2D(land, (matrix * (gl_FragCoord.xyw + vec3(dx,dy,0))).xy),
+    vec4(256.0*256.0*256.0, 256.0*256.0, 256.0, 0.0)
+  );
+  float s = sign(x - pow(2.0,23.0));
+  return s < 0.0 ? x * 0.01 : (s > 0.0 ? (x - pow(2.0,24.0)) * 0.01 : - pow(2.0,24.0));
 }
 float r(int dx,int dy){
   return texture2D(rain, (matrix * (gl_FragCoord.xyw + vec3(dx,dy,0))).xy).a;
@@ -41,7 +70,7 @@ vec4 main1(){
   float r2 = r(0, 0);
   float r3 = r(dx,dy);
 
-  return (h2 <= 0.0) ? vec4(0,0,0,0) :
+  return (h2 <= -1000.0) ? vec4(0,0,0,0) :
     (r1>0.0 && h1+r1>h2+r2 && h2+r2<h3+r3) ? vec4(0,0,0.5,r2+delta) :
     (r2>0.0 && h2+r2>h3+r3 && (r1==0.0||r1+h1<r2+h2)) ? vec4(0,0,0.5,r2-delta) : vec4(0,0,0.5,r2);
 
@@ -51,93 +80,100 @@ vec4 main2(){
   float a = texture2D(rain, (matrix * gl_FragCoord.xyw).xy).a;
 //  return
 //    a < 0.01 ? vec4(0) :
-//    a > 0.75 ? mix(vec4(1,0.6,0,0.75),vec4(1,0,0,0.75),(a-0.75) / 0.25)  :
-//    a > 0.50 ? mix(vec4(0,0,0,0.75),vec4(1,0.6,0,0.75),(a-0.50) / 0.25)  :
-//    a > 0.25 ? mix(vec4(0,0,1,0.75),vec4(0,0,0,0.75),(a-0.25) / 0.25)  :
-//               mix(vec4(1,1,1,0.75),vec4(0,0,1,0.75),(a     ) / 0.25)  ;
+//    a > 0.66 ? mix(vec4(1,0.6,0,0.75),vec4(1,0,0,0.75),(a-0.66) / 0.33)  :
+//    a > 0.33 ? mix(vec4(0,0,1,0.75),vec4(1,0.6,0,0.75),(a-0.33) / 0.33)  :
+//               mix(vec4(1,1,1,0.75),vec4(0,0,1,0.75),(a     ) / 0.33)  ;
+
+
+vec4 colors[4];
+colors[0] = vec4(0.00,0.80,0.00,0.75);
+colors[1] = vec4(0.00,0.80,1.00,0.75);
+colors[2] = vec4(0.00,0.00,1.00,0.75);
+colors[3] = vec4(0.30,0.00,0.00,0.75);
+float n = 1.0 / 4.0;
+float p = mod(a,n) / n;
 
   return
-    a < 0.01 ? vec4(0) :
-    a > 0.66 ? mix(vec4(1,0.6,0,0.75),vec4(1,0,0,0.75),(a-0.66) / 0.33)  :
-    a > 0.33 ? mix(vec4(0,0,1,0.75),vec4(1,0.6,0,0.75),(a-0.33) / 0.33)  :
-               mix(vec4(1,1,1,0.75),vec4(0,0,1,0.75),(a     ) / 0.33)  ;
+    a > n * 2.0 ? mix(colors[2],colors[3], p) :
+    a > n * 1.0 ? mix(colors[1],colors[2], p) :
+    a > n * 0.0 ? mix(colors[0],colors[1], p) :
+    vec4(0);
 }
 
 void main(){
   gl_FragColor = matrix[1][1] < 0.0 ? main2() : main1();
 }
 `;
-    var MyOverlay = L.Layer.extend({
+    var FloodOverlay = L.Layer.extend({
       initialize: function(src) {
         this._src = src;
         this._frames = [];
       },
-      getEvents: function() {
-        return {
-          "move": this.paint,
-          "resize": this.onResize
-        };
-      },
-      onAdd: function(map) {
-        this._canvas = document.createElement("canvas");
-        this._shadow = document.createElement("canvas");
+      createLandTexture: function(map) {
+        var s = map.getSize();
+        var e = document.createElement("canvas");
+        var c = e.getContext("2d");
+        e.width = s.x;
+        e.height = s.y;
+        c.fillStyle = "#800000";
+        c.fillRect(0, 0, s.x, s.y);
 
-        this._gl = $gl(this._canvas.getContext("webgl", {
-            premultipliedAlpha: false
-          }))
-          .shader("attribute vec2 xy;void main(){gl_Position = vec4(xy,0,1);}")
-          .shader(fragmentShader)
-          .bind("xy", [-1, -1, 1, -1, -1, 1, 1, 1]);
-
-        this.getPane().appendChild(this._canvas);
-        this.onResize();
-      },
-      onResize: function() {
-        if (!this._map || !this._canvas) return;
-        var size = this._map.getSize();
-        this._canvas.width = this._shadow.width = size.x;
-        this._canvas.height = this._shadow.height = size.y;
-        this._canvas.style.width = size.x + "px";
-        this._canvas.style.height = size.y + "px";
-        this._gl.viewport(0, 0, size.x, size.y);
-        this.paint();
-      },
-      onRemove: function(map) {
-        L.DomUtil.remove(this._canvas);
-      },
-      paint: function() {
-        if (!this._map || !this._canvas) return;
-
-        var canvas = this._canvas;
-        L.DomUtil.setPosition(canvas, this._map.containerPointToLayerPoint([0, 0]));
-
-        var context = this._shadow.getContext("2d");
-        context.clearRect(0, 0, canvas.width, canvas.height);
         for (var key in this._src._tiles) {
           var tile = this._src._tiles[key];
           if (tile.current) {
             var p1 = this._src._tileCoordsToNwSe(tile.coords)[0];
             var p2 = this._map.latLngToContainerPoint(p1);
             try {
-              context.drawImage(tile.el, p2.x, p2.y);
+              c.drawImage(tile.el, p2.x, p2.y);
             } catch (ex) {}
           }
         }
+        return e;
+      },
+      createRainTexture: function(map) {
+        var s = map.getSize();
+        var e = document.createElement("canvas");
+        var c = e.getContext("2d");
+        e.width = s.x;
+        e.height = s.y;
+        c.fillStyle = "rgba(0,0,0,0.33)";
+        c.fillRect(1, 1, s.x - 2, s.y - 2);
+        return e;
+      },
+      createDrawingCanvas: function(map) {
+        var s = map.getSize();
+        var e = document.createElement("canvas");
+        e.width = s.x;
+        e.height = s.y;
+        return e;
+      },
+      onAdd: function(map) {
+        var canvas = this.createDrawingCanvas(map);
+        var land = this.createLandTexture(map);
+        var rain = this.createRainTexture(map);
 
-        var rain = document.createElement("canvas");
-        rain.width = canvas.width;
-        rain.height = canvas.height;
-        var c = rain.getContext("2d");
-        c.fillStyle = "rgba(0,0,0,1)";
-        c.fillRect(1, 1, rain.width - 2, rain.height - 2);
+        this.getPane().appendChild(canvas);
+        L.DomUtil.setPosition(canvas, map.containerPointToLayerPoint([0, 0]));
 
-        var gl = this._gl;
-        gl.texture(0, this._shadow)
+        var gl = $gl(canvas.getContext("webgl", {
+            premultipliedAlpha: false
+          }))
+          .shader("attribute vec2 xy;void main(){gl_Position = vec4(xy,0,1);}")
+          .shader(fragmentShader)
+          .bind("xy", [-1, -1, 1, -1, -1, 1, 1, 1])
+          .texture(0, land)
           .texture(1, rain)
           .texture(2, rain)
-          .bind("land", 0);
+          .bind("land", 0)
+          .viewport(0, 0, canvas.width, canvas.height);
+
+        this._canvas = canvas;
+        this._gl = gl;
 
         this.start();
+      },
+      onRemove: function(map) {
+        L.DomUtil.remove(this._canvas);
       },
       stop: function() {
         while (this._frames.length > 0) L.Util.cancelAnimFrame(this._frames.pop());
@@ -181,7 +217,6 @@ void main(){
       }
     });
 
-
     var map = L.map("map", L.extend({
       zoom: 14,
       center: [35.6707, 139.7852],
@@ -190,20 +225,48 @@ void main(){
     map.zoomControl.setPosition("bottomright");
     L.hash(map);
 
-    L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/pale/{z}/{x}/{y}.png", {
-      attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html'>地理院タイル</a>"
+    L.control.layers({
+      "淡色地図": L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/pale/{z}/{x}/{y}.png", {
+        attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html'>地理院タイル</a>"
+      }).addTo(map),
+      "写真": L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/seamlessphoto/{z}/{x}/{y}.jpg", {
+        attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html'>地理院タイル</a>"
+      }),
+      "陰影": L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/hillshademap/{z}/{x}/{y}.png", {
+        attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html'>地理院タイル</a>"
+      })
+
     }).addTo(map);
+
+
+    var focus = null;
+
+    $("#info").click(function() {
+      if ($(this).is(".ready")) {
+        if (focus === null)
+          focus = new FloodOverlay(src).addTo(map);
+        $("#info").hide();
+      }
+    });
+
 
     var src = L.tileLayer("https://cyberjapandata.gsi.go.jp/xyz/{id}/{z}/{x}/{y}.png?qxz", {
       crossOrigin: true,
       opacity: 0,
+      attribution: "<a href='http://maps.gsi.go.jp/development/ichiran.html'>地理院タイル</a>",
       id: function(coords) {
         return coords.z === 15 ? "dem5a_png" : "dem_png";
       }
+    }).on("loading", function() {
+      $("#info").removeClass("ready").text("Now loading DEM tiles").show();
+      if (focus) {
+        focus.stop();
+        map.removeLayer(focus);
+        focus = null;
+      }
     }).on("load", function() {
-      dst.paint();
+      $("#info").addClass("ready").text("Click to Run").show();
     });
-    var dst = new MyOverlay(src).addTo(map);
 
     src.addTo(map);
   </script>
